# q2-optitrim

./: .gitignore  Makefile  README.md  pyproject.toml
environment-files/: q2-optitrim-qiime2-amplicon-dev.yml  q2-optitrim-qiime2-amplicon-release.yml
q2_optitrim/: __init__.py  _methods.py  _optimize.py  citations.bib  cli.py  formats.py  plugin_setup.py
q2_optitrim/tests/: __init__.py  test_methods.py  test_optimize.py
