[project]
name = "q2-optitrim"
authors = [
    { name = "Masafumi Harada", email = "harada@sfc.wide.ad.jp"}
]
description = "Plugin template."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

dependencies = [
    "qiime2",
    "optuna>=3.0",
    "pandas",
    "numpy",
    "q2-dada2",
    "q2-demux",
    "q2-types",
]

[project.urls]
Homepage = "https://github.com/haradama/q2-optitrim"

[project.entry-points.'qiime2.plugins']
"q2-optitrim" = "q2_optitrim.plugin_setup:plugin"

[project.scripts]
optitrim-search = "q2_optitrim.cli:main"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2-optitrim/_version.py"

[tool.versioningit]
default-version = "0.0.dev0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_optitrim*"]

[tool.setuptools.package-data]
q2_optitrim = ["**/*"]
